# niubot

./: Cargo.toml
src/: main.rs  util.rs
src/exchanges/: mod.rs  rfinex.rs
src/traits/: exchange.rs  fair_value.rs  mod.rs
