[package]
name = "niubot"
version = "0.1.0"
authors = ["Wu Minzhe <wuminzhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3"
custom_error = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
hmac = "0.7.1"
sha2 = "0.8.0"
chrono = "0.4"
reqwest = "0.9.19"
bigdecimal = "0.1.0"
